	the latest version from ejabberd (revision 1344).

	* c_src/tls_drv.c, c_src/ejabberd_zlib_drv.c, c_src/Makefile.am,
	c_src/Makefile.unix: De-orbit old port drivers because the compat
	layer is now ready.

	* src/compat/EXMPP-vendor: Add a file to track the ejabberd revision
	the compat layer is based on.

	* configure.ac: Add a line in the sumary to tell if Expat was found or
	not.

2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	With these changes, ejabberd 2.0.x can run without modifications with
	the exmpp compat layer.

	* src/core/exmpp_xmlstream.erl: Add support for old xmlstreamstart
	tuple. The format to use can be chosen by calling the new start/3
	function. Be careful, the old format is selected by default now,
	instead of the new one as before.
	(start/1): Remove the clause that takes only XML parser options
	because the API is confusing.

	* testsuite/check_xmlstream.erl: Use explicitly the new xmlstreamstart
	format.

	* src/compat/xml_stream.erl, src/Emakefile.in, src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add xml_stream
	to the compat layer.

	* src/core/exmpp_xmlstream.erl: A few style changes.

2008-06-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl (gen_setopts): Fixed a bug where
	'Options' was not passed to the underlying setopts/2 function.

	* src/compat/xml.erl: Synchronize this compat module with the latest
	version from ejabberd repository (revision 1344). This time, the only
	modifications are the calls to exmpp_xml; there's no changes to the
	documentation or the style. It should ease future modifications
	tracking. Also new features missing in exmpp_xml were identified.

	* src/compat/stringprep.erl: Synchronize this compat module with the
	latest version from ejabberd repository (revision 1344). As with xml,
	the modifications are limited to the calls to exmpp_stringprep.

	* include/jlib.hrl, include/Makefile.am, src/compat/jlib.erl: Again,