@@ -52,6 +52,9 @@
 	* configure.ac: Add a line in the sumary to tell if Expat was found or
 	not.
 
+	* c_src/exmpp_tls.h, c_src/exmpp_tls_openssl.c: Move return codes
+	definition to the generic header.
+
 2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	With these changes, ejabberd 2.0.x can run without modifications with
